# Turbine

./: .gitignore  .gitmodules  CMakeLists.txt  ProjectBullet.sln  ProjectBullet.vcxproj  ProjectBullet.vcxproj.filters  imgui.ini
Assets/: ProjectBullet.tiled-project  ProjectBullet.tiled-session
Assets/Scores/: Awaken.mid  Awaken.sib  Into The Deep.sib  Sous Szef.sib
Assets/Tilesets/: Developer Symbols.tsx  Fortress Spikes.tsx  Numbers.tsx  Stronghold Animations.tsx  Stronghold Details.tsx  Stronghold Spikes.tsx  Stronghold Terrain.tsx  Stronghold_Terrain_Tileset.tsx  TestMap.tmx
Assets/Tilesets/Fortress/: Spikes.kra  Spikes.png-autosave.kra
Assets/Tilesets/Multi_Platformer_Tileset_v2/: Stronghold Animations.tsx
Assets/Worlds/: DevWorld.tmx  TestMap.json  TestMap_Background Details.csv  TestMap_Background.csv  TestMap_Checkpoints.csv  TestMap_Terrain.csv
editor/: imgui.ini  turbine-editor
editor/Data/Assets/Bullets/: New Pattern.bullet  Smoke  Smoke.bullet
enc_temp_folder/e582f7ce89aa16a8a749e589cabb20f/: Map.cpp
src/: Box.cpp  Box.h  Bullet.cpp  Bullet.h  BulletPatternEditor.cpp  BulletPatternEditor.h  BulletWorld.cpp  BulletWorld.h  Camera.cpp  Camera.h  CameraVolume.cpp  CameraVolume.h  Checkpoint.cpp  Checkpoint.h  Collider.h  Collision.cpp  Collision.h  CollisionWorld.cpp  CollisionWorld.h  ColorSwatchWorld.cpp  ColorSwatchWorld.h  Controller.cpp  Controller.h  Debug.cpp  Debug.h  DevWorld.cpp  DevWorld.h  Emitter.cpp  Emitter.h  GameTimer.cpp  GameTimer.h  Global.h  GridWorld.cpp  GridWorld.h  Input.cpp  Input.h  Line.cpp  Line.h  Map.cpp  Map.h  (+108 more)
src/Shaders/Vertex/: Default.vs
src/editor/: editor-window-base.cpp  editor-window-base.h  editor.cpp  editor.h  particle-editor.cpp  particle-editor.h
src/input/: input.cpp
src/particle/: particle-affector-manager.h  particle-affector.cpp  particle-affector.h  particle-emitter.h  particle-loader.h  particle-manager.cpp  particle-manager.h  particle-system.h  particle.h
src/physics/: collision.cpp  rigidrect.cpp  rigidrect.h
src/system/: app.cpp  app.h  object.cpp  object.h  system.cpp  system.h
src/util/: debug.cpp  debug.h  imgui-utils.h  json.cpp  json.h  mathtypes.cpp  mathtypes.h  random.cpp  string-utils.cpp  timer.cpp  timer.h  utils.h
src/world/: world-particle-test.cpp  world.h
